# ninja_car_driving_control

./: .gitignore~  .gitmodules
drive_control/: CMakeLists.txt
drive_control/config/: xbox.config.yaml  xbox360_speed_direct.config.yaml  xbox360_speed_metric.config.yaml
drive_control/include/: teleop_drive_joy.h
drive_control/launch/: control.launch  drive.launch  remote_control.launch  remote_drive.launch  remote_hosts.launch  remote_teleop.launch  remote_teleop_control.launch  teleop.launch  teleop_control.launch
drive_control/msg/: DriveCommand.msg
drive_control/src/: control_node.py  teleop_drive_joy.cpp  teleop_drive_joy.cpp~  teleop_drive_joy_node.cpp
ros_pololu_servo/include/: pololu_motors.yaml
ros_pololu_servo/launch/: mg90s.yaml  pololu_example.launch
servo_controller/: 99-dynamixel.rules
servo_controller/config/: dynamixel_joint_controllers.yaml
servo_controller/launch/: controller_manager.launch
vicon_tools/: CMakeLists.txt  package.xml
vicon_tools/include/vicon_tools/: fake_tf_broadcaster.h
vicon_tools/launch/: fake_vicon.launch  fake_vicon_demo.launch  odom_tools.launch  vicon.launch  vicon_demo.launch  vrpn.launch
vicon_tools/rviz/: vicon.rviz
vicon_tools/src/: fake_tf_broadcaster.cpp
